<resources>
    <string name="app_name">Project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="detail_text_description">Ecran Detail</string>
    <string name="other_detail">Other Detail</string>
    <string name="other_detail2">other_detail2</string>
    <string name="other_detail3">other_detail3</string>
    <string name="other_detail4">other_detail4</string>
    <string name="other_detail5">other_detail5</string>
    <string name="other_detail6">other_detail6</string>
    <string name="other_detail7">other_detail7</string>
    <string name="other_detail8">other_detail8</string>
</resources>
