<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/detail_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_text_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/detail2_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_txt"
        app:layout_constraintVertical_bias="0.077"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/detail3_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_detail2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail2_txt"
        app:layout_constraintVertical_bias="0.081"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/detail4_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_detail3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail3_txt"
        app:layout_constraintVertical_bias="0.101"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/detail5_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_detail4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail4_txt"
        app:layout_constraintVertical_bias="0.127"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/detail6_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_detail5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail5_txt"
        app:layout_constraintVertical_bias="0.178"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/detail7_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_detail6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail6_txt"
        app:layout_constraintVertical_bias="0.202"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/detail8_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_detail7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail7_txt"
        app:layout_constraintVertical_bias="0.293"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/detail9_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_detail8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail8_txt"
        app:layout_constraintVertical_bias="0.439"
        tools:ignore="DuplicateIds" />


</androidx.constraintlayout.widget.ConstraintLayout>